# helix

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .percyrc.json  .prettierignore  1PASSWORD_MANUAL_SETUP.md  1PASSWORD_SETUP.md  ALL-PHASES-SUMMARY.md  AUDIT_SUMMARY.md  BOOTSTRAP-STRATEGY-FOR-YOU.md  BYOK-ARCHITECTURE-GUIDE.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  COMPLETION_STATUS.md  COMPREHENSIVE_EXECUTION_PLAN.md  CONTROL-PLANE-PROJECT-SUMMARY.md  COVERAGE_PUSH_100_PERCENT.md  CRITICAL_ISSUES_ANALYSIS.md  CROSS_PHASE_PERFORMANCE_AUDIT.md  DAY3-1PASSWORD-INTEGRATION-SUMMARY.md  DEPLOYMENT-READY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DESKTOP_BLUEPRINT_COMPLETION.md  DESKTOP_GATEWAY_SETUP.md  DOCS_CLEANUP_CHECKLIST.md  DOCS_CLEANUP_COMPLETE.md  Dockerfile.production  ENGINEER-3-COMPLETION-REPORT.md  ENGINEER-3-HANDOFF.txt  EXECUTIVE_SUMMARY.md  EXTENDED_SESSION_FINAL_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FIX_COMMANDS_AND_VERIFICATION.md  GATEWAY_FIX_SUMMARY.md  HELIX_DESKTOP_PERFORMANCE_AUDIT.md  HELIX_DESKTOP_QUICK_FIXES.md  (+126 more)
.claude/: ralph-loop.local.md  settings.json  settings.local.json
.helix-state/: .gitignore  README.md
.husky/: pre-commit
android/: README.md
blueprints/: 01-MASTER-ARCHITECTURE.md  02-DESKTOP-APP.md  03-OPENCLAW-INTEGRATION.md  04-ONBOARDING-WIZARD.md  05-DISTRIBUTION.md  AGENT-PROMPTS.md  EXECUTION-PROMPT.md  README.md  TODO-CHECKLIST.md
branding/: Project Helix.ai
docs/: 1PASSWORD-CICD-SETUP.md  AI-OPERATIONS-CONTROL-PLANE-MASTER-PLAN.md  AI-OPS-ONE-PAGE-SUMMARY.md  ANDROID-IMPLEMENTATION-COMPLETE.md  AXIS_BLUEPRINT_v1.md  CHANNELS_SETUP.md  CLEANUP-FINAL-SUMMARY.md  COVERAGE_ANALYSIS.md  CRITICAL_ARCHITECTURAL_FLAW.md  DATABASE-MIGRATION-STATUS.md  DEPLOYMENT_WITH_1PASSWORD.md  DESKTOP-STAGING-DEPLOYMENT.md  DOCUMENTATION-CLEANUP-SUMMARY.md  E2E_TESTING_PLAN.md  E2E_TEST_EXECUTION_STATUS.md  FUTURE_IMPROVEMENTS_DESKTOP.md  HELIX_AUTONOMOUS_BLUEPRINT.md  HELIX_LOCAL_INTERFACE_BLUEPRINT.md  HELIX_OBSERVATORY_BLUEPRINT.md  HELIX_TECHNICAL_SPEC.md  HELIX_WEBSITE_BRAND_TONE.md  IMPLEMENTATION_COMPLETE.md  IOS-IMPLEMENTATION-COMPLETE.md  LAYER5_CRON_SETUP.md  LIVING_AI_ARCHITECTURE_v1.md  MIGRATIONS-EXECUTION-GUIDE.md  MIGRATION_TO_1PASSWORD.md  ORCHESTRATION_MASTER_PLAN.md  PHASE-0.5-DEPLOYMENT-READINESS.md  PHASE-0.5-IMPLEMENTATION-ROADMAP.md  PHASE-0.5-MANUAL-STAGING-DEPLOYMENT.md  PHASE-0.5-PROGRESS.md  PHASE-0.5-QUICK-START.md  PHASE-0.5-STAGING-DEPLOYMENT-VERIFICATION.md  PHASE-11-WEEK1-FINAL.md  PHASE-11-WEEK1-STATUS.md  PHASE-2-INTEGRATION-ANALYSIS.md  PHASE-2-OPERATIONS-MIGRATION-PLAN.md  PHASE-2-PROGRESS.md  PHASE-3-COMPLETION-SUMMARY.md  (+58 more)
helix-desktop/: BUILD.md  CLAUDE.md  COMPONENT-INTEGRATION-DEMO.md  DESKTOP_PORTING_STRATEGY.md  FINAL-SESSION-4-UPDATE.md  PHASE-A-COMPLETION.md  PHASE-B-COMPLETION.md  PHASE-C-COMPLETION-SUMMARY.md  PHASE-C-PROGRESS.md  PHASE-C-TAURI-LAYER-COMPLETE.md  PHASE-C-TESTING-CHECKLIST.md  PROJECT-STATUS-FEB-2.md  QA_MANUAL_TESTING.md  RELEASE-NOTES-v1.0.0.md  SESSION-4-SUMMARY.md  TEST_EXECUTION_REPORT.md  TEST_EXECUTION_RESULTS.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  run-dev.bat  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
helix-desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
helix-desktop/src-tauri/resources/: README.md
helix-desktop/src-tauri/src/: lib.rs  main.rs  updater.rs
helix-desktop/src-tauri/src/commands/: auth.rs  clipboard.rs  config.rs  deeplink.rs  directories.rs  discord.rs  files.rs  gateway.rs  keyring.rs  mod.rs  psychology.rs  rust_executables.rs  scheduler.rs  system.rs
helix-desktop/src-tauri/src/config/: mod.rs  watcher.rs
helix-desktop/src-tauri/src/gateway/: mod.rs  monitor.rs
helix-desktop/src-tauri/src/tray/: menu.rs  mod.rs
helix-desktop/src-tauri/src/updater/: mod.rs
helix-runtime/: .oxlintrc.json  Dockerfile.1password  README.md  TEST_FIXES_SUMMARY.md  package-lock.json  package.json  test-gateway.mjs  test-results-helix-runtime.txt  vitest.config.ts
helix-rust/: .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  TEST_REPORT.md
helix-rust/crates/memory-synthesis/: Cargo.toml
helix-rust/crates/memory-synthesis/src/: clustering.rs  lib.rs  main.rs  pattern_detection.rs
helix-rust/crates/memory-synthesis/tests/: integration.rs
helix-rust/crates/psychology-decay/: Cargo.toml
helix-rust/crates/psychology-decay/src/: decay_models.rs  main.rs
helix-rust/crates/shared/: Cargo.toml
helix-rust/crates/shared/src/: lib.rs  supabase.rs  types.rs
helix-rust/crates/skill-sandbox/: Cargo.toml
helix-rust/crates/skill-sandbox/src/: main.rs  rpc_server.rs  wasm_runtime.rs
helix-rust/crates/sync-coordinator/: Cargo.toml
helix-rust/crates/sync-coordinator/src/: conflict_resolution.rs  main.rs  vector_clock.rs
helix-rust/crates/voice-pipeline/: Cargo.toml
helix-rust/crates/voice-pipeline/src/: audio_processing.rs  deepgram_client.rs  main.rs
helix_logging/: __init__.py  discord_logger.py  hash_chain.py
identity/: feared_self.json  goals.json  personality_traits.json  possible_selves.json
ios/: README.md
legacy/: AXIS_MEMORY_001_2025-10-29.md  AXIS_MEMORY_002_2025-10-29.md  AXIS_MEMORY_003_2025-11-01.md  AXIS_MEMORY_004_2025-11-01.md  AXIS_MEMORY_005_2025-11-27.md  (+6 more)
(+7909 files in other folders)
