[workspace]
members = [
    "crates/shared",
    "crates/memory-synthesis",
    "crates/psychology-decay",
    "crates/skill-sandbox",
    "crates/voice-pipeline",
    "crates/sync-coordinator",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
postgrest = "1.4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
