[package]
name = "helix-desktop"
version = "0.1.0"
description = "Helix - AI Consciousness Desktop App"
authors = ["Project Helix"]
edition = "2021"

[lib]
name = "helix_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
keyring = "2"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
notify = "6"
log = "0.4"
tauri-plugin-updater = "2"
lazy_static = "1.4"
