[package]
name = "memory-synthesis"
version = "0.1.0"
edition = "2021"

[lib]
name = "memory_synthesis"
path = "src/lib.rs"

[[bin]]
name = "memory-synthesis"
path = "src/main.rs"

[dependencies]
helix-shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"
clap = { version = "4.4", features = ["derive"] }
