[package]
name = "skill-sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skill-sandbox"
path = "src/main.rs"

[dependencies]
helix-shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime = "18.0"
wasmtime-wasi = "18.0"
wasi-common = "18.0"
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
tower = "0.4"
