[package]
name = "voice-pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice-pipeline"
path = "src/main.rs"

[dependencies]
helix-shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "multipart"] }
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
hound = "3.5"
